--- a/conf/sublime/.gitignore
+++ b/conf/sublime/.gitignore
@@ -1,6 +1,7 @@
 User/Package\ Control.last-run
 User/Package\ Control.ca-list
 User/Package\ Control.ca-bundle
+User/Package\ Control.user-ca-bundle
 User/Package\ Control.merged-ca-bundle
 User/Package\ Control.system-ca-bundle
 User/Package\ Control.cache/
