--- a/conf/sublime/.gitignore
+++ b/conf/sublime/.gitignore
@@ -7,5 +7,5 @@ User/Package\ Control.system-ca-bundle
 User/Package\ Control.cache/
 User/Package\ Control.ca-certs/
 *_cache.json
-User/Color\ Highlighter/themes/
+User/Color\ Highlighter/*
 User/c2u_tmp/
