--- a/conf/VSCode/settings.json
+++ b/conf/VSCode/settings.json
@@ -13,13 +13,15 @@
     "files.exclude": {
         "**/.git": true,
         "**/.svn": true,
-        "**/.DS_Store": true
+        "**/.DS_Store": true,
+		"**/*.pyc": true
     },
     "search.exclude": {
         "**/node_modules": true,
         "**/bower_components": true,
         "**/tmp": true,
-        "**/build": true
+        "**/build": true,
+		"**/dest": true
     },
 
 // other
