--- a/link/.eslintrc
+++ b/link/.eslintrc
@@ -28,7 +28,8 @@
   "ecmaFeatures": {
     "jsx": true,
     "experimentalObjectRestSpread": true,
-    "modules": true
+    "modules": true,
+    "spread": true,
   },
   "globals": {
     "react": true,
@@ -38,5 +39,8 @@
     "angular": true,
     "d3": true,
 	"Vue": true
+  },
+  "parserOptions": {
+    "sourceType": "module"
   }
 }
