--- a/conf/sublime/.gitignore
+++ b/conf/sublime/.gitignore
@@ -3,6 +3,7 @@ User/Package\ Control.ca-list
 User/Package\ Control.ca-bundle
 User/Package\ Control.user-ca-bundle
 User/Package\ Control.merged-ca-bundle
+User/oscrypto-ca-bundle.crt
 User/Package\ Control.system-ca-bundle
 User/Package\ Control.cache/
 User/Package\ Control.ca-certs/
