--- a/conf/VSCode/settings.json
+++ b/conf/VSCode/settings.json
@@ -30,5 +30,7 @@
 
 // other
 	"window.titleBarStyle": "native",
-	"files.trimTrailingWhitespace": true
+	"files.trimTrailingWhitespace": true,
+	"vimStyle.defaultMode": "insert",
+	"vimStyle.imapEsc": ",,"
 }
