--- a/conf/VSCode/settings.json
+++ b/conf/VSCode/settings.json
@@ -32,5 +32,6 @@
 	"window.titleBarStyle": "native",
 	"files.trimTrailingWhitespace": true,
 	"vimStyle.defaultMode": "insert",
-	"vimStyle.imapEsc": ",,"
+	"vimStyle.imapEsc": ",,",
+	"vimStyle.changeCursorStyle": false
 }
