--- a/conf/VSCode/settings.json
+++ b/conf/VSCode/settings.json
@@ -1,8 +1,10 @@
 // 将设置放入此文件中以覆盖默认设置
 {
 // editor config
-    "editor.fontFamily": "'Meslo LG M Regular', Menlo, 'Courier New', monospace",
+    // "editor.fontFamily": "'Meslo LG M Regular', Menlo, 'Courier New', monospace",
+    "editor.fontFamily": "Fira Code",
     "editor.fontSize": 14,
+    "editor.fontLigatures": true,
     "editor.insertSpaces": false,
     "editor.rulers": [80],
     "editor.renderWhitespace": true,
