--- a/link/.eslintrc
+++ b/link/.eslintrc
@@ -7,9 +7,9 @@
       2,
       "unix"
     ],
-    "no-unused-vars": [2, 
+    "no-unused-vars": [2,
       {
-      "args": "after-used", 
+      "args": "after-used",
       "argsIgnorePattern": "^React|angular|h",
       "vars": "all",
       "varsIgnorePattern": "^React|angular|h"
@@ -17,7 +17,8 @@
     ]
   },
   "plugins": [
-	"react"
+	"react",
+	"babel"
   ],
   "env": {
     "es6": true,
