--- a/conf/VSCode/settings.json
+++ b/conf/VSCode/settings.json
@@ -57,5 +57,6 @@
             "before": [",", ","],
             "after": ["<Esc>"]
         }
-    ]
+    ],
+    "editor.lineNumbers": "relative"
 }
