--- a/conf/VSCode/settings.json
+++ b/conf/VSCode/settings.json
@@ -1,7 +1,7 @@
 // 将设置放入此文件中以覆盖默认设置
 {
 // editor config
-    "editor.fontFamily": "Monaco, Menlo, 'Courier New', monospace",
+    "editor.fontFamily": "Input, Monaco, Menlo, 'Courier New', monospace",
     "editor.fontSize": 14,
     "editor.fontLigatures": true,
     "editor.insertSpaces": false,
