--- a/conf/VSCode/settings.json
+++ b/conf/VSCode/settings.json
@@ -51,12 +51,6 @@
     "explorer.enableDragAndDrop": false,
     "search.useIgnoreFilesByDefault": true,
     "workbench.colorTheme": "Gruvbox Dark (Medium Contrast)",
-    "vim.insertModeKeyBindings": [
-        {
-            "before": [",", ","],
-            "after": ["<Esc>"]
-        }
-    ],
     "editor.lineNumbers": "relative",
     "editor.quickSuggestions": {
         "other": true,
@@ -65,9 +59,7 @@
     },
     "editor.quickSuggestionsDelay": 20,
     "files.insertFinalNewline": true,
-    "vim.disableAnnoyingNeovimMessage": true,
     "extensions.autoUpdate": true,
-    "vim.disableAnnoyingGcMessage": true,
     "workbench.sideBar.location": "left",
     "editor.lineHeight": 20,
     "editor.roundedSelection": false,
@@ -83,5 +75,27 @@
     "explorer.openEditors.visible": 0,
     "explorer.openEditors.dynamicHeight": true,
     "workbench.editor.openPositioning": "right",
-    "swiftlint.enable": true
+    "swiftlint.enable": true,
+    // vim settings
+    "vim.leader": "\\",
+    "vim.startInInsertMode": true,
+    "vim.statusBarColorControl": true,
+    "vim.enableNeovim": true,
+    "vim.disableAnnoyingNeovimMessage": true,
+    "vim.timeout": 300,
+    "vim.insertModeKeyBindings": [
+        {
+            "before": [",", ","],
+            "after": ["<Esc>"]
+        }
+    ],
+    "vim.statusBarColors" : {
+        "normal": "#005f5f",
+        "insert": "#14884C"
+    },
+    "workbench.colorCustomizations": {
+        "statusBar.background": "#005f5f",
+        "statusBar.noFolderBackground": "#005f5f",
+        "statusBar.debuggingBackground": "#005f5f"
+    }
 }
