--- a/conf/VSCode/settings.json
+++ b/conf/VSCode/settings.json
@@ -4,7 +4,7 @@
     "editor.fontFamily": "Monaco, Menlo, 'Courier New', monospace",
     "editor.fontSize": 14,
     "editor.fontLigatures": true,
-    "editor.insertSpaces": false,
+    "editor.insertSpaces": true,
     "editor.rulers": [80],
 	"editor.renderWhitespace": "all",
     "editor.renderIndentGuides": false,
@@ -98,10 +98,12 @@
         "statusBar.debuggingBackground": "#14884C"
     },
     "vim.useCtrlKeys": false,
-    "[swift]": {
-        "editor.tabSize": 4,
-        "editor.insertSpaces": true
-    },
     "extensions.ignoreRecommendations": false,
-    "workbench.colorTheme": "Gruvbox Dark (Soft)"
+    "workbench.colorTheme": "Gruvbox Dark (Soft)",
+    "editor.trimAutoWhitespace": true,
+    "editor.tabSize": 4,
+    "[markdown]": {
+        "editor.wordWrap": "wordWrapColumn",
+        "editor.quickSuggestions": false
+    }
 }
