--- a/link/.ackrc
+++ b/link/.ackrc
@@ -1,6 +1,5 @@
---type-add
-js=.jsx
---type-add
-css=.sass,.lss,.scss
---type-set
-slim=.slim
+--type-add=js=.jsx
+--type-add=css=.sass,.lss,.scss
+--type-set=slim=.slim
+--ignore-dir=node_modules/
+--ignore-dir=bower_components/
